--- a/index.html
+++ b/index.html
@@ -4,9 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"></script> -->
+   <link rel="shortcut icon" href="./images/logo.png" type="image/x-icon">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
@@ -23,7 +21,7 @@
     <header>
         <nav class="navbar navbar-expand-md bg-white navbar-light">
             <!-- Brand -->
-            <a class="navbar-brand" href="index.html">Web Host</a>
+            <a class="navbar-brand" href="index.html"><img src="./images/logo.png" alt="logo"></a>
 
             <!-- Toggler/collapsibe Button -->
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
@@ -34,17 +32,17 @@
             <div class="collapse navbar-collapse" id="collapsibleNavbar">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+                        <a class="nav-link active" id="link" aria-current="page" href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="signin.html">Sign In</a>
+                        <a class="nav-link active" id="link" aria-current="page" href="signin.html">Sign In</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="signup.html">Sign Up</a>
+                        <a class="nav-link active" id="link" aria-current="page" href="signup.html">Sign Up</a>
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#plans-container">Plans</a>
+                        <a class="nav-link active" id="link" aria-current="page" href="#sec_3">Plans</a>
                     </li>
                 </ul>
             </div>
@@ -68,13 +66,11 @@
                 <div class="container">
                     <div class="row">
                         <div class="col">
-                            <div class="home_content text-right">
-                                <div class="home_title">الوجهة العربية الأولى لجميع خدمات وسائل التواصل الإجتماعي
+                            <div class="home_content text-left">
+                                <div class="home_title">Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
                                 </div>
-                                <div class="home_text">لديك قاعدة زبائن كبيرة وتريد أن تنضم لمجموعة الباعة الVIP الذين
-                                    يبيعون خدماتنا؟ <br>
-                                    وحوش الميديا تقدم تخفيض أوتوماتيكي للباعة أصحاب الطلبات العالية، لزيادة حصتهم من
-                                    كعكة الأرباح!
+                                <div class="home_text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deserunt, alias magnam. Doloremque quos, <br>
+                                    officiis incidunt ducimus quibusdam quae impedit animi ex obcaecati rerum, quo illo culpa exercitationem repudiandae facere labore?
                                 </div>
 
                             </div>
