--- a/payment.html
+++ b/payment.html
@@ -10,6 +10,8 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
+
 
    
    			
@@ -22,7 +24,7 @@
     <header>
         <nav class="navbar navbar-expand-md bg-white navbar-light">
             <!-- Brand -->
-            <a class="navbar-brand" href="index.html">Web Host</a>
+            <a class="navbar-brand" href="index.html"><img src="./images/logo.png" alt="logo"></a>
 
             <!-- Toggler/collapsibe Button -->
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
@@ -33,13 +35,30 @@
             <div class="collapse navbar-collapse" id="collapsibleNavbar">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+                        <a class="nav-link active" id="link" aria-current="page" href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="signin.html">Sign In</a>
+                        <a class="nav-link active" id="link" aria-current="page" href="signin.html">Sign In</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="signup.html">Sign Up</a>
+                        <a class="nav-link active" id="link" aria-current="page" href="signup.html">Sign Up</a>
+                    </li>
+
+                    <li class="nav-item">
+                        <a class="nav-link active" id="link" aria-current="page" href="#sec_3">Plans</a>
+                    </li>
+
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" id="link" data-toggle="dropdown"
+                            aria-haspopup="true" aria-expanded="false">
+                            <span class="no-icon"><i class="fa fa-user text-info"></i></span>
+
+                        </a>
+                        <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                            <a class="dropdown-item" href="profile.html">Profile</a>
+                            <a class="dropdown-item" href="plans.html">My Plans</a>
+                            <a class="dropdown-item" href="#">Sign Out</a>
+                        </div>
                     </li>
                 </ul>
             </div>
