--- a/index.html
+++ b/index.html
@@ -4,16 +4,15 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-   <link rel="shortcut icon" href="./images/logo.png" type="image/x-icon">
+    <link rel="shortcut icon" href="./images/logo.png" type="image/x-icon">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
+
     <link rel="stylesheet" href="./CSS/style.css" />
     <link rel="stylesheet" href="./CSS/home.css" />
-
-
-
     <title>Web Host</title>
 </head>
 
@@ -44,13 +43,29 @@
                     <li class="nav-item">
                         <a class="nav-link active" id="link" aria-current="page" href="#sec_3">Plans</a>
                     </li>
+
+                    <li class="nav-item dropdown" id="dropdown">
+                        <a class="nav-link dropdown-toggle" id="link" data-toggle="dropdown"
+                            aria-haspopup="true" aria-expanded="false">
+                            <span class="no-icon"><i class="fa fa-user text-info"></i></span>
+
+                        </a>
+                        <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink" id="drop-menu">
+                            <a class="dropdown-item" href="profile.html">Profile</a>
+                            <a class="dropdown-item" href="plans.html">My Plans</a>
+                            <a class="dropdown-item" href="#">Sign Out</a>
+                        </div>
+                    </li>
                 </ul>
             </div>
         </nav>
     </header>
 
     <main>
-
+            <div class="support">
+                <a href="support.html"><img src="./images/support.png" alt="support"></a>
+                <span class="support_text">Support</span>
+            </div>
         <section id="sec_1">
             <div class="home">
                 <div class="home_background"></div>
@@ -67,10 +82,12 @@
                     <div class="row">
                         <div class="col">
                             <div class="home_content text-left">
-                                <div class="home_title">Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
+                                <div class="home_title">Lorem ipsum dolor sit, amet consectetur adipisicing elit.
                                 </div>
-                                <div class="home_text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deserunt, alias magnam. Doloremque quos, <br>
-                                    officiis incidunt ducimus quibusdam quae impedit animi ex obcaecati rerum, quo illo culpa exercitationem repudiandae facere labore?
+                                <div class="home_text">Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                                    Deserunt, alias magnam. Doloremque quos, <br>
+                                    officiis incidunt ducimus quibusdam quae impedit animi ex obcaecati rerum, quo illo
+                                    culpa exercitationem repudiandae facere labore?
                                 </div>
 
                             </div>
@@ -139,102 +156,105 @@
         </section>
 
         <section id="sec_3">
-            <h1>Plans</h1>
-            <div id="plans-container">
-                <div class="plan">
-                    <h2>Basic</h2>
-                    <p id="description">
-                        This plan allows you to host <br> three websites
-                    </p>
-                    <p id="price">
-                        50 $/y
-                    </p>
+            <div id="plans">
+                <h1>Plans</h1>
+                <div id="plans-container">
+                    <div class="plan">
+                        <h2>Basic</h2>
+                        <p id="description">
+                            This plan allows you to host <br> three websites
+                        </p>
+                        <p id="price">
+                           <span>50</span>  $/y
+                        </p>
 
-                    <a href="payment.html"> <button type="submit" class="btn btn-primary">Subscribe</button></a>
+                        <a href="payment.html"> <button type="submit" class="btn btn-primary">Subscribe</button></a>
 
-                    <ul>
-                        <li>
-                            Storage : 50 GB SSD storage
-                        </li>
+                        <ul>
+                            <li>
+                                Storage : 50 GB SSD storage
+                            </li>
 
-                        <li>
-                            Websites : 1 websites
-                        </li>
+                            <li>
+                                Websites : 1 websites
+                            </li>
 
-                        <li>
-                            Custome Themes
-                        </li>
+                            <li>
+                                Custome Themes
+                            </li>
 
-                        <li>
-                            24/7 Customer support
-                        </li>
-                    </ul>
+                            <li>
+                                24/7 Customer support
+                            </li>
+                        </ul>
 
 
+                    </div>
+                    <div class="plan">
+                        <h2>Premium</h2>
+                        <p id="description">
+                            This plan allows you to host Un-limited websites
+                        </p>
+                        <p id="price">
+                           <span>100</span>  $/y
+                        </p>
+
+                        <a href="payment.html"> <button type="submit" class="btn btn-primary">Subscribe</button></a>
+
+                        <ul>
+                            <li>
+                                Storage : Unlimited SSD storage
+                            </li>
+
+                            <li>
+                                Websites : Unlimited websites
+                            </li>
+
+                            <li>
+                                Custome Themes
+                            </li>
+
+                            <li>
+                                24/7 Customer support
+                            </li>
+                        </ul>
+
+
+                    </div>
+
+                    <div class="plan">
+                        <h2>Gold</h2>
+                        <p id="description">
+                            This plan allows you to host Un-limited websites
+                        </p>
+                        <p id="price">
+                            <span>120</span> $/y
+                        </p>
+
+                        <a href="payment.html"> <button type="submit" class="btn btn-primary">Subscribe</button></a>
+
+                        <ul>
+                            <li>
+                                Storage : Unlimited SSD storage
+                            </li>
+
+                            <li>
+                                Websites : Unlimited websites
+                            </li>
+
+                            <li>
+                                Custome Themes
+                            </li>
+
+                            <li>
+                                24/7 Customer support
+                            </li>
+                        </ul>
+
+
+                    </div>
                 </div>
-                <div class="plan">
-                    <h2>Premium</h2>
-                    <p id="description">
-                        This plan allows you to host Un-limited websites
-                    </p>
-                    <p id="price">
-                        100 $/y
-                    </p>
 
-                    <a href="payment.html"> <button type="submit" class="btn btn-primary">Subscribe</button></a>
-
-                    <ul>
-                        <li>
-                            Storage : Unlimited SSD storage
-                        </li>
-
-                        <li>
-                            Websites : Unlimited websites
-                        </li>
-
-                        <li>
-                            Custome Themes
-                        </li>
-
-                        <li>
-                            24/7 Customer support
-                        </li>
-                    </ul>
-
-
-                </div>
-
-                <div class="plan">
-                    <h2>Gold</h2>
-                    <p id="description">
-                        This plan allows you to host Un-limited websites
-                    </p>
-                    <p id="price">
-                        120 $/y
-                    </p>
-
-                    <a href="payment.html"> <button type="submit" class="btn btn-primary">Subscribe</button></a>
-
-                    <ul>
-                        <li>
-                            Storage : Unlimited SSD storage
-                        </li>
-
-                        <li>
-                            Websites : Unlimited websites
-                        </li>
-
-                        <li>
-                            Custome Themes
-                        </li>
-
-                        <li>
-                            24/7 Customer support
-                        </li>
-                    </ul>
-
-
-                </div>
             </div>
 
 
