--- a/index.html
+++ b/index.html
@@ -82,12 +82,10 @@
                     <div class="row">
                         <div class="col">
                             <div class="home_content text-left">
-                                <div class="home_title">Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                                <div class="home_title">Do you have a website or store of your own and you want to publish it on the Internet?
                                 </div>
-                                <div class="home_text">Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                                    Deserunt, alias magnam. Doloremque quos, <br>
-                                    officiis incidunt ducimus quibusdam quae impedit animi ex obcaecati rerum, quo illo
-                                    culpa exercitationem repudiandae facere labore?
+                                <div class="home_text">You are in the right place Here we are going to introduce you to “Web Hosting” service Web hosting is one of the most important things that you can have when you  <br>
+                                    are getting started in the digital world. You can reserve a space on the server dedicated to the hosting company, where it will store your website and all its information.
                                 </div>
 
                             </div>
